[package]
name = "native"
version = "0.1.0"
authors = ["sinclairzx81 <haydn.developer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
deno_core = "0.88.0"
serde = "1.0.126"
minifb = "0.19.3"
futures = "0.3.15"
